docs/index.css
:root {  
	--dark-bg: rgb(29, 30, 32);
	--dark-accent: rgb(48, 48, 53);
	--dark-accent-2: rgba(205, 205, 205, 0.9);
	--dark-accent-3: rgba(131, 116, 231, 0.904);
	
	--light-bg: rgb(255, 255, 255);
	--light-accent: rgba(233, 233, 233, 0.8);
	--light-accent-2: rgb(41, 41, 41);
	--light-accent-3: rgb(98, 79, 223);

	--theme-bg: rgb(255, 255, 255);
	--theme-accent: rgba(233, 233, 233, 0.8);
	--theme-accent-2: rgb(41, 41, 41);
	--theme-accent-3: rgb(98, 79, 223);

	--font-size: 18px;
	--font-size-2: 19px;
	--font-size-code: 17px;
}

html {
  font-family: Helvetica, Arial, sans-serif;
  height: 100%;
}

body{
    margin: 0%;
	margin-left: 15%;
	margin-right: 15%;
    height: 100%;
    display: flex;
    flex-direction: column;
    background-color: var(--theme-bg);
}

.contents{
    flex-grow: 1;
}

@media (max-width : 480px) {
	body{
        margin-left: 5%;
        margin-right: 5%;
	}
}

.profile {
    padding-left: 15px;
    padding-right: 15px;
}

h1,h2,h3,h4,h5{
    color: var(--theme-accent-2);
}

p{
    font-size: var(--font-size);
    line-height: 1.3;
    color: var(--theme-accent-2);
}

hr{
    border: 2px solid;
    color: var(--theme-accent);
}

svg{
    stroke: var(--theme-accent-2);
}

.disabled{
    pointer-events:none;
}

.project ul{
    color: var(--theme-accent-2);
    list-style: none;
    margin: 10px;
    padding: 0px;
    font-size: var(--font-size-2);
}

.project ul li{
    padding: 5px;
    margin-top: 10px;
    margin-bottom: 10px;
    padding-left: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
}

details {
    color: var(--theme-accent-2);
    font-size: var(--font-size-2);
    margin-top: 10px;
    margin-bottom: 10px;
}

details > summary{
    cursor: pointer;
    user-select:none;
    margin: 0px;
    padding-left: 10px;
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: var(--theme-accent);
}

.project ul details > a{
    background-color: var(--theme-accent);
    margin-left: 40px;
    margin-right: 40px;
}

.project a{
    color: var(--theme-accent-2);
    display: block;
    text-decoration: none;
    background-color: var(--theme-accent);
}

.contact a{
    display: inline-block;
    padding: 10px;
}

footer{
    padding: 10px;
    line-height: 1.3;
    text-align: center;
    color: var(--theme-accent-2);
    background-color: var(--theme-accent);
}

button {
	font-weight: bold;
	display: inline-block;
	color: var(--theme-accent-2);
	background-color: var(--theme-accent);
	text-align: center;
	margin: 0px;
	padding: 15px;
	font-size: var(--font-size-2);
	border: none;
	text-decoration: none;
}

button:hover {
	cursor: pointer;
}

